# 31gal

./: Cargo.toml  README.md
doc/: Gal Script.md
src/: game_pack.rs  main.rs  script.rs  window.rs
