[package]
name = "gal"
version = "0.1.0-dev"
edition = "2021"

[[bin]]
name = "31gal"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.6", features = ["derive"] }
serde_json = "1.0.96"
zip = "0.6.5"

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["ttf", "image"]

